# lib/db/src/schema/goats.ts
@@ -1,4 +1,4 @@
-import { doublePrecision, integer, pgTable, serial, text, timestamp, varchar } from "drizzle-orm/pg-core";
+import { boolean, doublePrecision, integer, pgTable, serial, text, timestamp, varchar } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 
@@ -25,6 +25,7 @@ export const goatsTable = pgTable("goats", {
   age: integer("age"),
   description: text("description"),
   imageUrl: text("image_url"),
+  leasedBuck: boolean("leased_buck").default(false).notNull(),
   rightEarTattoo: varchar("right_ear_tattoo", { length: 4 }),
   leftEarTattoo: varchar("left_ear_tattoo", { length: 4 }),
   createdAt: timestamp("created_at").defaultNow().notNull(),
